<resources>
    <string name="app_name">EventsApp</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_heading">Find Amazing events happening around you.</string>
    <string name="dashboard_sub_title">480 events around you</string>
    <string name="search_bar_hint">search for an event...</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan in nisl nisi scelerisque eu. Semper feugiat nibh sed pulvinar proin gravida. Quisque sagittis purus sit amet. Faucibus turpis in eu mi bibendum. Quisque egestas diam in arcu cursus euismod quis viverra. Dictumst quisque sagittis purus sit amet volutpat consequat. Tristique risus nec feugiat in. Nunc id cursus metus aliquam. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Leo integer malesuada nunc vel. Ac feugiat sed lectus vestibulum mattis ullamcorper velit. Pulvinar etiam non quam lacus suspendisse faucibus. Donec pretium vulputate sapien nec sagittis aliquam malesuada bibendum. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Vehicula ipsum a arcu cursus vitae congue.  </string>
    <string name="location">Vagator Beach, Goa, India</string>
    <string name="desc">Sunburn Festival is Asia\'s biggest electronic music festival, and this December the festival returns to its homeland – Goa – for three sprawling days of house, EDM and pop on Vagator Beach. Recent lineups have included dance royalty such as Martin Garrix, Afrojack, Dimitri Vegas and Like Mike and many more </string>
    <!-- eventpage strings -->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="events_string">Events</string>
    <string name="favorits_string">Favorites</string>
    <string name="label_string">Profile</string>
    <string name="label_ek1_string">camera</string>
    <string name="home_ek6_string">Home</string>
    <string name="search_string">Search</string>
    <string name="event_name_string">Event Name</string>
    <string name="all_string">All</string>
    <string name="payment_string">Event</string>
    <string name="payment_ek1_string">Activity</string>
    <string name="payment_ek2_string">Articles</string>
    <string name="item_notification">notification</string>
    <!-- navigation_drawer_full_screen_brand strings -->
    <string name="chaimet_saad_eljed_string">chaimet saad eljed </string>
    <string name="chaimet_esprit_tn_string">Chaimet@esprit.tn</string>
    <string name="calendar_ek2_string">Calendar</string>
    <string name="_2_string">2</string>
    <string name="history_string">History</string>
    <string name="_2_ek1_string">2</string>
    <string name="location_string">Location</string>
    <string name="payments_methods_string">Payments Methods</string>
    <string name="quiz_string">Quiz</string>
    <string name="_2_ek2_string">2</string>
    <string name="refer_a_friend_string">Refer a Friend</string>
    <string name="support_string">Support</string>
    <string name="colour_scheme_string">Colour Scheme</string>
    <string name="light_string">Light</string>
    <string name="dark_string">Dark</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nav_bar">navBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_all">All</string>
    <string name="lbl_store">store</string>
    <string name="lbl_event">Event</string>
    <string name="lbl_search">Search </string>
    <string name="lbl_code_bch12">Code: BCH12</string>
    <string name="lbl_event_name">Event Name</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_activity">Activity</string>
    <string name="lbl_copy_code">Copy Code</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_image">Image</string>
    <string name="lbl_camera">camera</string>
    <string name="lbl_articles">Articles</string>
    <!-- welcome strings -->

    <string name="home_string">Home</string>

    <string name="label_ek2_string">camera</string>
    <string name="home_ek5_string">Home</string>

    <string name="image_string">Image</string>
    <string name="flat_50__off__upto___string"></string>
    <string name="flat_50__off__upto___ek1_string">Event Name</string>
    <string name="code__bch12_string">Code: BCH12</string>
    <string name="copy_code_string">Copy Code</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>